// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default component render 1`] = `
<div
  className="d-flex"
>
  <select
    className="form-control"
    id="selectRfpReportDefinition"
    onChange={[Function]}
    style={
      Object {
        "marginTop": "1px",
      }
    }
    value={13}
  >
    <option
      key="13"
      value={13}
    >
      Site Coverage
    </option>
    <option
      key="14"
      value={14}
    >
      RFP Report
    </option>
  </select>
  <div
    className="btn btn-group p-0"
  >
    <button
      className="btn btn-light"
      disabled={false}
      key="csv"
      onClick={[Function]}
      style={
        Object {
          "whiteSpace": "nowrap",
          "width": "75px",
        }
      }
    >
      <span>
        <i
          className="fas fa-file-csv"
        />
         
        csv
      </span>
    </button>
    <button
      className="btn btn-light"
      disabled={false}
      key="json"
      onClick={[Function]}
      style={
        Object {
          "whiteSpace": "nowrap",
          "width": "75px",
        }
      }
    >
      <span>
        <span
          style={
            Object {
              "fontFamily": "monospace",
            }
          }
        >
          {}
        </span>
         
        json
      </span>
    </button>
    <button
      className="btn btn-light"
      disabled={false}
      key="xls"
      onClick={[Function]}
      style={
        Object {
          "whiteSpace": "nowrap",
          "width": "75px",
        }
      }
    >
      <span>
        <i
          className="fas fa-file-excel"
        />
         
        xls
      </span>
    </button>
  </div>
</div>
`;

exports[`When a report is being downloaded 1`] = `
<div
  className="d-flex"
>
  <select
    className="form-control"
    id="selectRfpReportDefinition"
    onChange={[Function]}
    style={
      Object {
        "marginTop": "1px",
      }
    }
    value={13}
  >
    <option
      key="13"
      value={13}
    >
      Site Coverage
    </option>
    <option
      key="14"
      value={14}
    >
      RFP Report
    </option>
  </select>
  <div
    className="btn btn-group p-0"
  >
    <button
      className="btn btn-light"
      disabled={true}
      key="csv"
      onClick={[Function]}
      style={
        Object {
          "whiteSpace": "nowrap",
          "width": "75px",
        }
      }
    >
      <i
        className="fa fa-spinner fa-spin"
      />
    </button>
    <button
      className="btn btn-light"
      disabled={false}
      key="json"
      onClick={[Function]}
      style={
        Object {
          "whiteSpace": "nowrap",
          "width": "75px",
        }
      }
    >
      <span>
        <span
          style={
            Object {
              "fontFamily": "monospace",
            }
          }
        >
          {}
        </span>
         
        json
      </span>
    </button>
    <button
      className="btn btn-light"
      disabled={false}
      key="xls"
      onClick={[Function]}
      style={
        Object {
          "whiteSpace": "nowrap",
          "width": "75px",
        }
      }
    >
      <span>
        <i
          className="fas fa-file-excel"
        />
         
        xls
      </span>
    </button>
  </div>
</div>
`;

exports[`When selected report changes 1`] = `
<div
  className="d-flex"
>
  <select
    className="form-control"
    id="selectRfpReportDefinition"
    onChange={[Function]}
    style={
      Object {
        "marginTop": "1px",
      }
    }
    value={13}
  >
    <option
      key="13"
      value={13}
    >
      Site Coverage
    </option>
    <option
      key="14"
      value={14}
    >
      RFP Report
    </option>
  </select>
  <div
    className="btn btn-group p-0"
  >
    <button
      className="btn btn-light"
      disabled={false}
      key="csv"
      onClick={[Function]}
      style={
        Object {
          "whiteSpace": "nowrap",
          "width": "75px",
        }
      }
    >
      <span>
        <i
          className="fas fa-file-csv"
        />
         
        csv
      </span>
    </button>
    <button
      className="btn btn-light"
      disabled={false}
      key="json"
      onClick={[Function]}
      style={
        Object {
          "whiteSpace": "nowrap",
          "width": "75px",
        }
      }
    >
      <span>
        <span
          style={
            Object {
              "fontFamily": "monospace",
            }
          }
        >
          {}
        </span>
         
        json
      </span>
    </button>
    <button
      className="btn btn-light"
      disabled={false}
      key="xls"
      onClick={[Function]}
      style={
        Object {
          "whiteSpace": "nowrap",
          "width": "75px",
        }
      }
    >
      <span>
        <i
          className="fas fa-file-excel"
        />
         
        xls
      </span>
    </button>
  </div>
</div>
`;

exports[`When selected report changes 2`] = `
<div
  className="d-flex"
>
  <select
    className="form-control"
    id="selectRfpReportDefinition"
    onChange={[Function]}
    style={
      Object {
        "marginTop": "1px",
      }
    }
    value={14}
  >
    <option
      key="13"
      value={13}
    >
      Site Coverage
    </option>
    <option
      key="14"
      value={14}
    >
      RFP Report
    </option>
  </select>
  <div
    className="btn btn-group p-0"
  >
    <button
      className="btn btn-light"
      disabled={false}
      key="csv"
      onClick={[Function]}
      style={
        Object {
          "whiteSpace": "nowrap",
          "width": "75px",
        }
      }
    >
      <span>
        <i
          className="fas fa-file-csv"
        />
         
        csv
      </span>
    </button>
    <button
      className="btn btn-light"
      disabled={false}
      key="json"
      onClick={[Function]}
      style={
        Object {
          "whiteSpace": "nowrap",
          "width": "75px",
        }
      }
    >
      <span>
        <span
          style={
            Object {
              "fontFamily": "monospace",
            }
          }
        >
          {}
        </span>
         
        json
      </span>
    </button>
    <button
      className="btn btn-light"
      disabled={false}
      key="xls"
      onClick={[Function]}
      style={
        Object {
          "whiteSpace": "nowrap",
          "width": "75px",
        }
      }
    >
      <span>
        <i
          className="fas fa-file-excel"
        />
         
        xls
      </span>
    </button>
  </div>
</div>
`;
